tests/crablangdoc-ui/invalid-keyword.rs
#![feature(crablangdoc_internals)]

#[doc(keyword = "foo df")] //~ ERROR
mod foo {}
